--- a/simple.yaml
+++ b/simple.yaml
@@ -1,20 +1,18 @@
 
-setup:
+global:
   namespace: nm-kubuculum
-  basedir: /root/mpillai/runs
+  base_directory: /root/mpillai/runs
 
 run_control:
-  benchmark: fio_random
+  benchmark: dummy_pause
 
 benchmarks:
-  fio_random:
-    filesize_gb: 2
-    numjobs: 2
+  dummy_pause:
+    duration: 10
 
 multirun_control:
   test_list:
     - benchmarks:
-       fio_random:
-         ninstances: 2
-         bs_kb: 4
+       dummy_pause:
+         duration: 3
 
