--- a/sample_input/storageclasses_ocs.yaml
+++ b/sample_input/storageclasses_ocs.yaml
@@ -38,14 +38,14 @@ dropcaches:
         nodeselector: node-role.kubernetes.io/master=''
 
 batch_control:
-  test_list:
-    - test_tag: rbd
+  run_list:
+    - run_tag: rbd
       run_control:
         storageclass: ocs-storagecluster-ceph-rbd
-    - test_tag: cephfs
+    - run_tag: cephfs
       run_control:
         storageclass: ocs-storagecluster-cephfs
-    - test_tag: gp2
+    - run_tag: gp2
       run_control:
         storageclass: gp2
 
