--- a/kubuculum/servers/server_fio/defaults.yaml
+++ b/kubuculum/servers/server_fio/defaults.yaml
@@ -38,6 +38,6 @@ datadir: /dataset
 # fio port; not used
 port: 8765
 
-# fio image
-fio_image: quay.io/mpillai/fio
+# fio image; set by caller
+# fio_image: quay.io/mpillai/fio
 
